--- a/projectentry/karachi-update-another-distribution-in-baldia/index.html
+++ b/projectentry/karachi-update-another-distribution-in-baldia/index.html
@@ -20,7 +20,7 @@
 <div class="pic-caption">Benificiary Carrying his share</div>
 <p><img src="//images.ctfassets.net/7cdmx3u8smde/48YXQSKCyz8kORvoIlBjxo/e4468518c8a17182852c816e1422d877/Crowd_Management.jpeg" alt="Crowd Management"></p>
 <div class="pic-caption">Crowds were lined up outside to keep distribution manageable</div>
-<p>Women lineup from a seperate entrance
+<p>Women lined up from a seperate entrance
 <img src="//images.ctfassets.net/7cdmx3u8smde/3k8EWIZY0v32YFEhEHASY1/1c5e4dc1de3402fad3dd97276c243c4a/Baldia_Distribution_3.jpeg" alt="Women Line up"></p>
 <p><img src="//images.ctfassets.net/7cdmx3u8smde/4ATe7USZBLRqASOU5wPDsi/0d0c413de32909d28fd8519ae5ce7014/Badlia_Distribution_4.jpeg" alt="Separate Women Lineup"></p>
 <p><img src="//images.ctfassets.net/7cdmx3u8smde/5aqHW1iZSsYQVs3jdhzNvC/6019710033b05d10269a7663c0faaf86/Seprate_Entrance_and_line_up_for_woman.jpeg" alt="Seprate Entrance and line up for woman"></p>
