--- a/projectentry/thar-update-ration-distribution-to-129-more-families/index.html
+++ b/projectentry/thar-update-ration-distribution-to-129-more-families/index.html
@@ -34,7 +34,6 @@
     ہرپار: 27 
     </li>
     <li>
-    <li>
         19 خاندانوں کوراشن دیا گیا :
       <ul>
         <li>
@@ -48,6 +47,8 @@
   </ul>
 </div>
 <p><img src="//images.ctfassets.net/7cdmx3u8smde/75LkDwBF9JZIsc311iw5JV/a79f2e3c3a22e5aa9e36b6a70ce956d7/01_TharDistribution.jpg" alt="Thar Distribution"></p>
+<hr>
+<p><img src="//images.ctfassets.net/7cdmx3u8smde/5i7KGUaEFOnACtqqHuo9cY/42c617cbd8bf7c76511f78390902283a/Ration_Distribution_3.jpeg" alt="Ration Distribution 3"></p>
 <hr>
 <p><img src="//images.ctfassets.net/7cdmx3u8smde/wBKrkZXqilrdFU2gNWCBO/d6f4a5cb4d5f17fe938ee08d5c4e6213/Ration_Distribution_2.jpeg" alt="Ration Distribution 2"></p>
 <hr>
